src/test/compile-fail/omitted-arg-in-item-fn.rs
fn foo(x) { //~ ERROR expected `:` but found `)`
}